Bug 475964 - Changing video resolution doesn't do anything
Summary: Changing video resolution doesn't do anything
Status: RESOLVED FIXED
Alias: None
Product: PlasmaTube
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Linus Jahn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-22 15:36 UTC by Bart Ribbers
Modified: 2024-04-03 19:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.02
Sentry Crash Report:


Attachments
Screenshot of the resolution list (13.37 KB, image/jpeg)
2023-10-22 15:36 UTC, Bart Ribbers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2023-10-22 15:36:40 UTC
Created attachment 162502 [details]
Screenshot of the resolution list

Also right now it seems to be random ordering, it would be nice to sort that by quality.

Also I didn't realize "Settings" would just have resolution options available. Is the plan to add more settings there or is it just going to be resolution options? If the latter maybe the icon to open the menu should be changed.
Comment 1 Joshua Goins 2024-04-03 19:57:57 UTC
Git commit 91e113b056902cb642c8849654538d07c08a5c3f by Joshua Goins.
Committed on 03/04/2024 at 19:52.
Pushed by redstrate into branch 'master'.

Fix the formats shown in the resolution box

Now we do some smarter filtering and sorting to prevent empty and
useless entries showing up there.

M  +38   -2    src/models/videomodel.cpp

https://invent.kde.org/multimedia/plasmatube/-/commit/91e113b056902cb642c8849654538d07c08a5c3f
Comment 2 Joshua Goins 2024-04-03 19:58:05 UTC
Git commit 5d11824dba358d02457a818a97505417a9d6a7b9 by Joshua Goins.
Committed on 03/04/2024 at 19:57.
Pushed by redstrate into branch 'master'.

Fix the video quality setting not actually doing anything

M  +4    -2    src/controllers/videocontroller.cpp
M  +2    -1    src/models/videomodel.cpp

https://invent.kde.org/multimedia/plasmatube/-/commit/5d11824dba358d02457a818a97505417a9d6a7b9
Comment 3 Joshua Goins 2024-04-03 19:59:37 UTC
Git commit bd369ca51232306bda2cc30b082fa19435f8f673 by Joshua Goins.
Committed on 03/04/2024 at 19:58.
Pushed by redstrate into branch 'release/24.02'.

Fix the formats shown in the resolution box

Now we do some smarter filtering and sorting to prevent empty and
useless entries showing up there.
(cherry picked from commit 91e113b056902cb642c8849654538d07c08a5c3f)

M  +38   -2    src/models/videomodel.cpp

https://invent.kde.org/multimedia/plasmatube/-/commit/bd369ca51232306bda2cc30b082fa19435f8f673
Comment 4 Joshua Goins 2024-04-03 19:59:38 UTC
Git commit f4c1b76abb338992c2c4a1b61fc0ebc50219a28b by Joshua Goins.
Committed on 03/04/2024 at 19:58.
Pushed by redstrate into branch 'release/24.02'.

Fix the video quality setting not actually doing anything
(cherry picked from commit 5d11824dba358d02457a818a97505417a9d6a7b9)

M  +4    -2    src/controllers/videocontroller.cpp
M  +2    -1    src/models/videomodel.cpp

https://invent.kde.org/multimedia/plasmatube/-/commit/f4c1b76abb338992c2c4a1b61fc0ebc50219a28b