Fix the video quality setting not actually doing anything

BUG: 475964
(cherry picked from commit 5d11824dba358d02457a818a97505417a9d6a7b9)